@@ -32,7 +32,6 @@ export TEXTDOMAIN=@PACKAGE@
 export TEXTDOMAINDIR="@localedir@"
 
 host_os=@host_os@
-source_dir=
 target=
 datadir="@datadir@"
 if [ "x$pkgdatadir" = x ]; then
@@ -96,7 +95,6 @@ usage () {
     target_trans="$(gettext "TARGET")"
     # TRANSLATORS: "current" refers to the platform user's currently running on
     print_option_help "--target=$target_trans" "$(gettext "install GRUB for TARGET platform [default=current]")"
-    print_option_help "--directory=$(gettext "DIR")" "$(gettext "use GRUB images from DIR. Takes precedence over target")"
     print_option_help "--grub-setup=$(gettext "FILE")" "$(gettext "use FILE as grub-setup")"
     print_option_help "--grub-mkimage=$(gettext "FILE")" "$(gettext "use FILE as grub-mkimage")"
     print_option_help "--grub-mkrelpath=$(gettext "FILE")" "$(gettext "use FILE as grub-mkrelpath")"
@@ -175,11 +173,6 @@ do
 	efidir="`argument $option "$@"`"; shift;;
     --efi-directory=*)
 	efidir="`echo "$option" | sed 's/--efi-directory=//'`" ;;
-
-    --directory | -d)
-	source_dir="`argument $option "$@"`"; shift;;
-    --directory=*)
-	source_dir="`echo "$option" | sed 's/--directory=//'`" ;;
 
     --target)
 	target="`argument $option "$@"`"; shift;;
@@ -264,7 +257,7 @@ do
     esac
 done
 
-if [ x$source_dir = x ]; then
+if [ x$source_directory = x ]; then
     if [ x$target = x ]; then
 	case x"`uname -m`" in
 	    x"powerpc"* | x"ppc"*)
@@ -321,15 +314,15 @@ if [ x$source_dir = x ]; then
 		echo	;;
 	esac
     fi
-    source_dir="${libdir}/@PACKAGE@/$target"
+    source_directory="${libdir}/@PACKAGE@/$target"
 fi
 
-if ! [ -d "$source_dir" ]; then
-    gettext_printf "%s doesn't exist. Please specify --target or --directory\\n" "$source_dir"
+if ! [ -d "$source_directory" ]; then
+    gettext_printf "%s doesn't exist. Please specify --target or --directory\\n" "$source_directory"
     exit 1
 fi
 
-. "${source_dir}"/modinfo.sh
+. "${source_directory}"/modinfo.sh
 
 if [ "${grub_modinfo_target_cpu}-${grub_modinfo_platform}" = "i386-pc" ] ; then
     if [ x$disk_module = xunspecified ]; then
@@ -516,10 +509,10 @@ else
 fi
 
 # Copy the GRUB images to the GRUB directory.
-grub_install_files "${source_dir}" "${grubdir}" "${grub_modinfo_target_cpu}-$grub_modinfo_platform" all
+grub_install_files "${source_directory}" "${grubdir}" "${grub_modinfo_target_cpu}-$grub_modinfo_platform" all
 
 if [ "${grub_modinfo_target_cpu}-${grub_modinfo_platform}" = "i386-pc" ] || [ "${grub_modinfo_target_cpu}-${grub_modinfo_platform}" = "sparc64-ieee1275" ] ; then
-    for file in "${source_dir}"/*.img "${source_dir}"/efiemu??.o; do
+    for file in "${source_directory}"/*.img "${source_directory}"/efiemu??.o; do
 	if test -f "$file"; then
 	    cp -f "$file" "${grubdir}/${grub_modinfo_target_cpu}-$grub_modinfo_platform" || exit 1
 	fi
@@ -685,9 +678,9 @@ case "${grub_modinfo_target_cpu}-${grub_modinfo_platform}" in
 esac
 
 if [ x"$config_opt_file" = x ]; then
-    "$grub_mkimage" -d "${source_dir}" -O "${mkimage_target}" --output="${grubdir}/${grub_modinfo_target_cpu}-$grub_modinfo_platform/core.${imgext}" --prefix="${prefix_drive}${relative_grubdir}" $grub_decompression_module $modules || exit 1
+    "$grub_mkimage" -d "${source_directory}" -O "${mkimage_target}" --output="${grubdir}/${grub_modinfo_target_cpu}-$grub_modinfo_platform/core.${imgext}" --prefix="${prefix_drive}${relative_grubdir}" $grub_decompression_module $modules || exit 1
 else
-    "$grub_mkimage" -c "${config_opt_file}" -d "${source_dir}" -O "${mkimage_target}" --output="${grubdir}/${grub_modinfo_target_cpu}-$grub_modinfo_platform/core.${imgext}" --prefix="${prefix_drive}${relative_grubdir}" $grub_decompression_module $modules || exit 1
+    "$grub_mkimage" -c "${config_opt_file}" -d "${source_directory}" -O "${mkimage_target}" --output="${grubdir}/${grub_modinfo_target_cpu}-$grub_modinfo_platform/core.${imgext}" --prefix="${prefix_drive}${relative_grubdir}" $grub_decompression_module $modules || exit 1
 fi
 
 # Backward-compatibility kludges
@@ -698,9 +691,9 @@ elif [ "${grub_modinfo_target_cpu}-${grub_modinfo_platform}" = "i386-ieee1275" ]
 elif [ "${grub_modinfo_target_cpu}-${grub_modinfo_platform}" = "i386-efi" ] || [ "${grub_modinfo_target_cpu}-${grub_modinfo_platform}" = "x86_64-efi" ]; then
 
     if [ x"$config_opt_file" = x ]; then
-	"$grub_mkimage" -d "${source_dir}" -O "${mkimage_target}" --output="${grubdir}/${grub_modinfo_target_cpu}-$grub_modinfo_platform/grub.efi" --prefix="" $grub_decompression_module $modules || exit 1
+	"$grub_mkimage" -d "${source_directory}" -O "${mkimage_target}" --output="${grubdir}/${grub_modinfo_target_cpu}-$grub_modinfo_platform/grub.efi" --prefix="" $grub_decompression_module $modules || exit 1
     else
-	"$grub_mkimage" -c "${config_opt_file}" -d "${source_dir}" -O "${mkimage_target}" --output="${grubdir}/${grub_modinfo_target_cpu}-$grub_modinfo_platform/grub.efi" --prefix="" $grub_decompression_module $modules || exit 1
+	"$grub_mkimage" -c "${config_opt_file}" -d "${source_directory}" -O "${mkimage_target}" --output="${grubdir}/${grub_modinfo_target_cpu}-$grub_modinfo_platform/grub.efi" --prefix="" $grub_decompression_module $modules || exit 1
     fi
 fi
 
